"ChangeLog"

2005-06-08	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-42-CHP-01-12-merged-dataexpr-10:
	  Child branch merge.  Details in src/ChangeLog.  


2005-06-06	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-42-CHP-01-09-dataexpr-06:
	  .cvsignore: ignore auto-generated config.hchk


2005-05-22	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-39:
	  Major housework with headers, making them 'standalone'.
		See src/ChangeLog for details.  


2005-05-20	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-38:
	  configure.in: check for getopt
	  Reorganized main programs, having factored out common top-level
		functionality into main/main_funcs.{h,cc}
	  see also src/ChangeLog, test/ChangeLog for more details.


2005-05-19	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-37-merged-PRS-01-09:
	  Merged revisions from -PRS-01 branch, which also includes
		essential core utility library fixes.  
		Details in src/ChangeLog.  
	  Also updated a few parser/prs tests to account for bison/yacc 
		differences.


2005-05-13	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-36-merged-exprcheck-07:
	  Merged revisions from -main-00-35-exprcheck branch to trunk.  
	  Summary: replaced parser::expr::check_build() (and friends)
		with more appropriate routines and interfaces.  
		Eliminated entity::object_list, and context's object_stacks.  
	  See src/ChangeLog for details.  


2005-05-04	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-35:
	  From now on, #include files should refer to full relative path, 
	  never relying on -Ipath in CPPFLAGS.  Hopefully, this makes code
	  easier to follow when tracing through includes across different
	  directories.  


2005-05-04	David Fang	<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-30:
	  Re-synchronized test expected outputs between bison- and yacc-